--- a/about.html
+++ b/about.html
@@ -49,7 +49,7 @@
                     <p>I am Frontend Developer, I have completed my Post Graduation in Computer
                             Application from Kamla Nehru Mahavidyalaya, Nagpur. I have done my Internship as
                         a Front End Developer from ProCohat Technologies Pvt. Ltd., also I have Two Years Experience in Banking
-                        Sector. Currently i am Percuing Full Stack Development Certification Program from UpGrad Campus.</p>
+                        Sector. I Completed Full Stack Development Certification Program from UpGrad Campus.</p>
                 </div>
             </div>
         </section>
