--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <div class="sec_profile">
                 <p class="sec_text_p1">Hello, I'm</p>
                 <h1 class="name_1">Hrushikesh Jadhao</h1>
-                <p class="sec_text_p2">Frontend Developer</p>
+                <p class="sec_text_p2">Front End Developer</p>
                 <div class="btns">
                     <button class="btn btn_cv" onclick="window.open('Hrushikesh_Resume.pdf')">Download CV</button>
                     <button class="btn btn_contact" onclick="window.open('contact.html')">Contact Info</button>
