--- a/projects.html
+++ b/projects.html
@@ -93,6 +93,21 @@
                             </div>
                         </div>
                     </div>
+
+
+                    <div class="project_box">
+                        <div class="prj_name">
+                            <h3>NUUK Dummy Project</h3>
+                        </div>
+                        <div class="prj_bio">
+                            <div class="prj_info">
+                                <P class="para">This Web Project Create for UpGrad Campus Using HTML & CSS<b> This is Dummy Project.</b></P>
+                            </div>
+                            <div class="prj_link">
+                                <a href="https://rushijadhao1998.github.io/united/" class="link">Click Here</a>
+                            </div>
+                        </div>
+                    </div>
     
                 </div>
     
