--- a/projects.html
+++ b/projects.html
@@ -104,7 +104,7 @@
                                 <P class="para">This Web Project Create for UpGrad Campus Using HTML & CSS<b> This is Dummy Project.</b></P>
                             </div>
                             <div class="prj_link">
-                                <a href="https://rushijadhao1998.github.io/united/" class="link">Click Here</a>
+                                <a href="https://rushijadhao1998.github.io/Dummy_project/" class="link">Click Here</a>
                             </div>
                         </div>
                     </div>
