--- a/projects.html
+++ b/projects.html
@@ -108,6 +108,21 @@
                             </div>
                         </div>
                     </div>
+
+
+                    <div class="project_box">
+                        <div class="prj_name">
+                            <h3>Aadvay Foundation</h3>
+                        </div>
+                        <div class="prj_bio">
+                            <div class="prj_info">
+                                <P class="para">This Web Project Create Using HTML, CSS & JavaScript.<b> This Project is currently Under Construction.</b></P>
+                            </div>
+                            <div class="prj_link">
+                                <a href="https://rushijadhao1998.github.io/aadvay/" class="link">Click Here</a>
+                            </div>
+                        </div>
+                    </div>
     
                 </div>
     
