--- a/about.html
+++ b/about.html
@@ -57,7 +57,7 @@
 
         <footer class="footer">
             <div class="footer-text">
-                <p>Copyright &copy; 2023 By Hrushikesh Jadhao</p>
+                <p>Copyright &copy;<script>document.write(new Date().getFullYear());</script> By Hrushikesh Jadhao</p>
             </div>
         </footer>
     </div>
